# server-client-OOP

./: CmakeLists.txt  CmakeLists.txt.backup  idea.txt
include/: CMakeLists.txt
include/client/: Client.hpp
include/interface/: HostInterface.hpp
include/server/: ClientManagerThread.hpp  Server.hpp
include/server/socket/: ServerSocket.hpp  ServerSocketForClient.hpp
include/socket/: ClientSocket.hpp  Socket.hpp
src/: CMakeLists.txt
src/client/: Client.cpp
src/server/: CMakeLists.txt  ClientManagerThread.cpp  CommandManager.cpp  Server.cpp  main.cpp
src/server/socket/: CMakeLists.txt  ServerSocket.cpp  ServerSocketForClient.cpp
src/socket/: CMakeLists.txt  ClientSocket.cpp  Socket.cpp
